ROS2_Foxy/log/build_2024-10-29_06-34-26/fair_drip/stdout_stderr.log
running egg_info
writing build/fair_drip/fair_drip.egg-info/PKG-INFO
writing dependency_links to build/fair_drip/fair_drip.egg-info/dependency_links.txt
writing entry points to build/fair_drip/fair_drip.egg-info/entry_points.txt
writing requirements to build/fair_drip/fair_drip.egg-info/requires.txt
writing top-level names to build/fair_drip/fair_drip.egg-info/top_level.txt
reading manifest file 'build/fair_drip/fair_drip.egg-info/SOURCES.txt'
writing manifest file 'build/fair_drip/fair_drip.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip/robot_test.py to robot_test.cpython-38.pyc
  File "/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip/robot_test.py", line 144
running install_data
running install_egg_info
    
    ^
SyntaxError: unexpected EOF while parsing

removing '/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip-0.0.1-py3.8.egg-info' (and everything under it)
Copying build/fair_drip/fair_drip.egg-info to /root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/python3.8/site-packages/fair_drip-0.0.1-py3.8.egg-info
running install_scripts
Installing fair_lis script to /root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/fair_drip
Installing robot_test script to /root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/fair_drip
Installing talker script to /root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/install/fair_drip/lib/fair_drip
writing list of installed files to '/root/ros2_ws/src/Ajou_Drip_Project/ROS2_Foxy/build/fair_drip/install.log'
